eclat-compiler/tests/good/wcet/pow-unification-loops.ecl
let f <<?n>> = 
   for i = 0 to int<<2^2^?n>> by (2^?n) do print_int i done;;